--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -18,6 +18,8 @@ body{
 }
 nav {
     display: flex;
+   align-items: center;
+   justify-content: space-between;
 }
 .nav-title{
     color: var(--Dark-01, #181818);
@@ -30,6 +32,7 @@ nav {
 }
 nav > ul {
     display: flex;
+    align-items: center;
 }
 nav li {
     list-style: none;
