--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -9,7 +9,7 @@ body{
     border-radius: 5px;
     background: #FD6E0A;
     border : 0;
-    color: var(--White-Color, #FFF);
+    color:#FFF;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
@@ -23,13 +23,19 @@ nav {
    margin: 0 230px;
 }
 .nav-title{
-    color: var(--Dark-01, #181818);
+    color: #181818;
 
 
     font-size: 45px;
 
     font-weight: 800;
 
+}
+.section-title {
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
 }
 nav > ul {
     display: flex;
@@ -45,13 +51,55 @@ nav a {
 }
 .header {
     background: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right ;
 }
 .name {
-    padding: 30 px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     margin-left:  230px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.name .profile-picture {
+.name .pro-pic {
     width: 584px;
+}
+.pro-pic {
+ 
+}
+.banner-greeting {
+    color:  #474747;
+    font-size: 45px;
+    margin-bottom: 0;
+}
+.banner-content {
+    max-width: 500px;
+}
+.banner-name {
+    color:  #181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-dis{
+    color:#757575;
+    margin-bottom: 30px;
+    font-size: 18px;
+    font-weight: 400;
+}
+/* main section header */
+.about {
+    padding: 130px;
+    margin: 130px 230px  ;
+
+    border-radius: 10px;
+    background: #FFF8F3;
+}
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+
 }
