--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -90,6 +90,10 @@ nav a {
     font-weight: 400;
 }
 /* main section header */
+main {
+ 
+    margin : 0 auto;
+}
 .about {
     padding: 130px;
     margin: 130px 230px  ;
@@ -102,4 +106,11 @@ nav a {
     text-align: center;
     font-size: 18px;
 
+}
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+.about-info {
+    text-align: center;
 }
