--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -113,4 +113,37 @@ main {
 }
 .about-info {
     text-align: center;
+
+}
+.info-description {
+    font-weight: 900;
+}
+.section2-title {
+    text-align: center;
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+}
+.section2-decription{
+    color: #757575;
+text-align: center;
+
+font-size: 18px;
+
+font-weight: 400;
+}
+#what-i-do {
+    text-align: center;
+    padding: 30px 345px ;
+
+}
+.skill-container {
+    display: flex;
+}
+.skill {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    width: 267px;
+    height: 377px;
 }
