--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -94,6 +94,9 @@ main {
  
     margin : 0 auto;
 }
+main section {
+   margin-top: 130px;
+}
 .about {
     padding: 130px;
     margin: 130px 230px  ;
@@ -139,11 +142,23 @@ font-weight: 400;
 }
 .skill-container {
     display: flex;
+    gap: 24px;
 }
 .skill {
+    padding: 30px;
     border-radius: 5px;
     background: #FFF;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
-    width: 267px;
-    height: 377px;
+
 }
+.skill-decription {
+    color: #757575;
+}
+.resume-container {
+    display: flex;
+}
+.resume-column-title {
+    color:  #474747;
+    font-weight: 700;
+}
+
